# pgsql-schema-compare

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  tox.ini
src/: pgsql-schema-compare.py  program.py
