[metadata]
name = Project_Name
description = Project Description
version = 0.1.0
author = Julien Bordet
platforms = linux, win32, macos

[options]
packages = find:
package_dir =
    =src
install_requires =
    python_dotenv
python_requires = >= 3.10
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    flake8
    pre-commit
    mypy
    bump2version

[flake8]
ignore = E203
exclude = 
    .git
    __pycache__
    venv
max-line-length=119

[mypy]
ignore_missing_imports = True
files = src/*.py
